--- a/index.html
+++ b/index.html
@@ -138,15 +138,15 @@
     <div class="content" id="basic">
       <div class="file-row">
         <span>Basic Thai part 1</span>
-        <a class="download-btn" href="pdf/basic-part1.pdf" download>Download</a>
+        <a class="download-btn" href="pdf/Basic Thai part1.pdf" download>Download</a>
       </div>
       <div class="file-row">
         <span>Basic Thai part 2</span>
-        <a class="download-btn" href="pdf/basic-part2.pdf" download>Download</a>
+        <a class="download-btn" href="pdf/Basic Thai part2.pdf" download>Download</a>
       </div>
       <div class="file-row">
         <span>Basic Thai part 3</span>
-        <a class="download-btn" href="pdf/basic-part3.pdf" download>Download</a>
+        <a class="download-btn" href="pdf/Basic Thai part3.pdf" download>Download</a>
       </div>
       <div class="file-row">
         <span>Basic Thai summary</span>
@@ -161,7 +161,7 @@
     <div class="content" id="preinter">
       <div class="file-row">
         <span>Pre-intermediate Thai sample</span>
-        <a class="download-btn" href="pdf/pre-intermediate-sample.pdf" download>Download</a>
+        <a class="download-btn" href="pdf/Pre-intermediate Thai sample.pdf" download>Download</a>
       </div>
     </div>
 
@@ -172,7 +172,7 @@
     <div class="content" id="inter">
       <div class="file-row">
         <span>Intermediate Thai sample</span>
-        <a class="download-btn" href="pdf/intermediate-sample.pdf" download>Download</a>
+        <a class="download-btn" href="pdf/Intermediate Thai sample.pdf" download>Download</a>
       </div>
     </div>
 
@@ -183,7 +183,7 @@
 <div class="content" id="preadv">
   <div class="file-row">
     <span>Pre-advance Thai sample</span>
-    <a class="download-btn" href="pdf/pre-advance-sample.pdf" download>Download</a>
+    <a class="download-btn" href="pdf/Pre-Advance Thai sample.pdf" download>Download</a>
   </div>
 </div>
 
@@ -195,7 +195,7 @@
 <div class="content" id="adv">
   <div class="file-row">
     <span>ฝึกอ่านจับใจความ sample</span>
-    <a class="download-btn" href="pdf/advance-reading.pdf" download>Download</a>
+    <a class="download-btn" href="pdf/ฝึกอ่านจับใจความ sample.pdf" download>Download</a>
   </div>
 </div>
 
@@ -219,3 +219,4 @@
 
 </body>
 </html>
+
