--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       </div>
       <div class="file-row">
         <span>Basic Thai summary</span>
-        <a class="download-btn" href="pdf/basic-sum.pdf" download>Download</a>
+        <a class="download-btn" href="pdf/Basic Thai sum.pdf" download>Download</a>
       </div>
     </div>
 
@@ -219,4 +219,5 @@
 
 </body>
 </html>
+
 
