--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-<title>Thai lesson Material</title>
+<title>Thai Lesson Material</title>
 
 <style>
   body {
@@ -219,6 +219,7 @@
 
 </body>
 </html>
+
 
 
 
